--- a/2_初识vscode.html
+++ b/2_初识vscode.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>初识vscode - 阿巴阿巴</title>
-        <link rel="stylesheet" type="text/css" href="../essay - css/初识vscode.css">
+        <link rel="stylesheet" type="text/css" href="./essay - css/初识vscode.css">
     </head>
     <body style="overflow-x:hidden">
         <div class="body">
@@ -94,4 +94,5 @@
             </div>
         </div>
     </body>
+
 </html>
