--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>阿巴阿巴の小窝 - 关于博主</title>
-        <link rel="stylesheet" type="text/css" href="../css/about.css">
+        <link rel="stylesheet" type="text/css" href="./about.css">
     </head>
     <body>
         <div class="body">
@@ -58,4 +58,5 @@
             </div>
         </div>
     </body>
+
 </html>
