--- a/3_html的基础框架.html
+++ b/3_html的基础框架.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>html的基础框架 - 阿巴阿巴</title>
-        <link rel="stylesheet" type="text/css" href="./essay - css/html的基础框架.css">
+        <link rel="stylesheet" type="text/css" href="./html的基础框架.css">
     </head>
     <body style="overflow-x:hidden">
         <div class="body">
@@ -185,3 +185,4 @@
         </div>
 
     </body>
+
