--- a/1_今天开始写代码喽~.html
+++ b/1_今天开始写代码喽~.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>今天开始写代码喽~ - 阿巴阿巴</title>
-        <link rel="stylesheet" type="text/css" href="./essay - css/今天开始写代码喽~.css">
+        <link rel="stylesheet" type="text/css" href="./今天开始写代码喽~.css">
     </head>
     <body>
         <div class="body">
@@ -74,3 +74,4 @@
     </body>
 
 </html>
+
