--- a/essay-essay-index.html
+++ b/essay-essay-index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>阿巴阿巴の小窝 - 随笔</title>
-        <link rel="stylesheet" type="text/css" href="../essay-index-css/essay-essay-index.css">
+        <link rel="stylesheet" type="text/css" href="./essay-essay-index.css">
     </head>
     <body>
         <div class="body">
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="C:\Users\1.1\Desktop\前端学习\源码\博客\image\headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -35,7 +35,7 @@
             </div>
             <div class="essay">
                 <div class="essay-1">
-                    <a href="../essay/1_今天开始写代码喽~.html" class="essay-1-a">
+                    <a href="./1_今天开始写代码喽~.html" class="essay-1-a">
                         <div class="essay-1-background">
                             <div class="essay-1-background-blackbox"></div>
                             <div class="essay-1-title">
@@ -45,10 +45,11 @@
                     </a>
                     <ul type="none" class="essay1-label">
                         <li class="essay-1-time"><p>📅2024年7月18日</p></li>
-                        <li><a href="../classify-index-html/travel-index.html" class="essay-1-label">🌇人生这旅途</a></li>
+                        <li><a href="./travel-index.html" class="essay-1-label">🌇人生这旅途</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </body>
+
 </html>
