--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="../image/headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -34,7 +34,7 @@
                 </ul>
             </div>
             <div class="head-img">
-                <img src="../image/my-img.png" width="850px" height="475px" class="my-img">
+                <img src="./my-img.png" width="850px" height="475px" class="my-img">
                 <div class="myimg-bottom"></div>
                 <div class="text-about">
                     <p>关于</p>
@@ -44,7 +44,7 @@
                 <p>📅2024年07月18日</p>
             </div>
             <div class="text-1">
-                <p class="text-1-text">09 年出生，为热爱奋斗着，努力学着变得勇敢</p>
+                <p class="text-1-text">13 年出生，为热爱奋斗着，努力学着变得勇敢</p>
                 <h1 class="text-1-title">我是谁</h1>
                 <hr width="900px" size="1px" class="text-1-hr">
                 <div class="text-1-hr-box"></div>
@@ -60,3 +60,4 @@
     </body>
 
 </html>
+
