--- a/3_html的基础框架.html
+++ b/3_html的基础框架.html
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="C:\Users\1.1\Desktop\前端学习\源码\博客\image\headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -34,7 +34,7 @@
                 </ul>
             </div>
             <div class="title-img">
-                <img src="../image/essay-html-title-background.png" width="850px" height="320px" class="titleimg">
+                <img src="./essay-html-title-background.png" width="850px" height="320px" class="titleimg">
                 <div class="title-img-background"></div>
                 <div class="title-img-text">
                     <h1>html的基础框架</h1>
@@ -43,7 +43,7 @@
             <div class-="title-bottom">
                 <ul type="none" class="title-bottom-label">
                     <li class="title-bottom-label-1"><p>📅2024年7月20日</p></li>
-                    <li><a href="../classify-index-html/prog-index.html" class="title-bottom-label-2">💻编程</a></li>
+                    <li><a href="./prog-index.html" class="title-bottom-label-2">💻编程</a></li>
                 </ul>
             </div>
             <div class="body-1"> 
@@ -185,4 +185,5 @@
         </div>
 
     </body>
+
 
