--- a/2_初识vscode.html
+++ b/2_初识vscode.html
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="C:\Users\1.1\Desktop\前端学习\源码\博客\image\headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -27,14 +27,14 @@
             </div>
             <div class="nav">
                 <ul type="none" class="nav-ul">
-                    <li><a href="../html/index.html" class="yes">🏠回到首页</a></li>
-                    <li><a href="../html/text.html" class="yes">📄文章归档</a></li>
-                    <li><a href="../html/tory.html" class="yes">📅博客历史</a></li>
-                    <li><a href="../html/about.html" class="yes">😎关于博主</a></li>
+                    <li><a href="./index.html" class="yes">🏠回到首页</a></li>
+                    <li><a href="./text.html" class="yes">📄文章归档</a></li>
+                    <li><a href="./tory.html" class="yes">📅博客历史</a></li>
+                    <li><a href="./about.html" class="yes">😎关于博主</a></li>
                 </ul>
             </div>
             <div class="title-img">
-                <img src="../image/essay-vscode-title-background.png" width="850px" height="320px" class="titleimg">
+                <img src="./essay-vscode-title-background.png" width="850px" height="320px" class="titleimg">
                 <div class="title-img-background"></div>
                 <div class="title-img-text">
                     <h1>初识vscode</h1>
@@ -43,7 +43,7 @@
             <div class-="title-bottom">
                 <ul type="none" class="title-bottom-label">
                     <li class="title-bottom-label-1"><p>📅2024年7月20日</p></li>
-                    <li><a href="../classify-index-html/prog-index.html" class="title-bottom-label-2">💻编程</a></li>
+                    <li><a href="./prog-index.html" class="title-bottom-label-2">💻编程</a></li>
                 </ul>
             </div>
             <div class="body-1"> 
@@ -96,4 +96,5 @@
     </body>
 
 </html>
+
 
