--- a/1_今天开始写代码喽~.html
+++ b/1_今天开始写代码喽~.html
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="../image/headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -27,14 +27,14 @@
             </div>
             <div class="nav">
                 <ul type="none" class="nav-ul">
-                    <li><a href="../html/index.html" class="yes">🏠回到首页</a></li>
-                    <li><a href="../html/text.html" class="yes">📄文章归档</a></li>
-                    <li><a href="../html/tory.html" class="yes">📅博客历史</a></li>
-                    <li><a href="../html/about.html" class="yes">😎关于博主</a></li>
+                    <li><a href="./index.html" class="yes">🏠回到首页</a></li>
+                    <li><a href="./text.html" class="yes">📄文章归档</a></li>
+                    <li><a href="./tory.html" class="yes">📅博客历史</a></li>
+                    <li><a href="./about.html" class="yes">😎关于博主</a></li>
                 </ul>
             </div>
             <div class="title-img">
-                <img src="../image/essay-essay-title-background.png" width="850px" height="320px" class="titleimg">
+                <img src="./essay-essay-title-background.png" width="850px" height="320px" class="titleimg">
                 <div class="title-img-background"></div>
                 <div class="title-img-text">
                     <h1>今天开始写代码喽~</h1>
@@ -43,7 +43,7 @@
             <div class-="title-bottom">
                 <ul type="none" class="title-bottom-label">
                     <li class="title-bottom-label-1"><p>📅2024年7月18日</p></li>
-                    <li><a href="../classify-index-html/travel-index.html" class="title-bottom-label-2">🌇人生这旅途</a></li>
+                    <li><a href="./travel-index.html" class="title-bottom-label-2">🌇人生这旅途</a></li>
                 </ul>
             </div>
             <div class="body-1">
@@ -74,4 +74,5 @@
     </body>
 
 </html>
+
 
