--- a/essay-vscode-index.html
+++ b/essay-vscode-index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>阿巴阿巴の小窝 - vscode</title>
-        <link rel="stylesheet" type="text/css" href="../essay-index-css/essay-vscode-index.css">
+        <link rel="stylesheet" type="text/css" href="./essay-vscode-index.css">
     </head>
     <body>
         <div class="body">
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="C:\Users\1.1\Desktop\前端学习\源码\博客\image\headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -27,15 +27,15 @@
             </div>
             <div class="nav">
                 <ul type="none" class="nav-ul">
-                    <li><a href="../html/index.html" class="yes">🏠回到首页</a></li>
-                    <li><a href="../html/text.html" class="yes">📄文章归档</a></li>
-                    <li><a href="../html/tory.html" class="yes">📅博客历史</a></li>
-                    <li><a href="../html/about.html" class="yes">😎关于博主</a></li>
+                    <li><a href="./index.html" class="yes">🏠回到首页</a></li>
+                    <li><a href="./text.html" class="yes">📄文章归档</a></li>
+                    <li><a href="./tory.html" class="yes">📅博客历史</a></li>
+                    <li><a href="./about.html" class="yes">😎关于博主</a></li>
                 </ul>
             </div>
             <div class="essay">
                 <div class="essay-1">
-                    <a href="../essay/2_初识vscode.html" class="essay-1-a">
+                    <a href="./2_初识vscode.html" class="essay-1-a">
                         <div class="essay-1-background">
                             <div class="essay-1-background-blackbox"></div>
                             <div class="essay-1-title">
@@ -51,4 +51,5 @@
             </div>
         </div>
     </body>
+
 </html>
