--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>阿巴阿巴の小窝</title>
-        <link rel="stylesheet" type="text/css" href="../css/index.css">
+        <link rel="stylesheet" type="text/css" href="./index.css">
     </head>
     <body>
         <div class="body">
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="../image/headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -34,7 +34,7 @@
                 </ul>
             </div>
             <div class="essay-1">
-                <a href="../essay/1_今天开始写代码喽~.html" class="essay-1-a">
+                <a href="./1_今天开始写代码喽~.html" class="essay-1-a">
                     <div class="essay-1-background">
                         <div class="essay-1-background-blackbox"></div>
                         <div class="essay-1-title">
@@ -44,11 +44,11 @@
                 </a>
                 <ul type="none" class="essay1-label">
                     <li class="essay-1-time"><p>📅2024年7月18日</p></li>
-                    <li><a href="../essay-index-html/essay-essay-index.html" class="essay-1-label">✒️随笔</a></li>
+                    <li><a href="./essay-essay-index.html" class="essay-1-label">✒️随笔</a></li>
                 </ul>
             </div>
             <div class="essay-2">
-                <a href="../essay/2_初识vscode.html" class="essay-2-a">
+                <a href="./2_初识vscode.html" class="essay-2-a">
                     <div class="essay-2-background">
                         <div class="essay-2-background-blackbox"></div>
                         <div class="essay-2-title">
@@ -58,11 +58,11 @@
                 </a>
                 <ul type="none" class="essay2-label">
                     <li class="essay-2-time"><p>📅2024年7月20日</p></li>
-                    <li><a href="../classify-index-html/prog-index.html" class="essay-2-label">💻编程</a></li>
+                    <li><a href="./prog-index.html" class="essay-2-label">💻编程</a></li>
                 </ul>
             </div>
             <div class="essay-3">
-                <a href="../essay/3_html的基础框架.html" class="essay-3-a">
+                <a href="./3_html的基础框架.html" class="essay-3-a">
                     <div class="essay-3-background">
                         <div class="essay-3-background-blackbox"></div>
                         <div class="essay-3-title">
@@ -72,9 +72,10 @@
                 </a>
                 <ul type="none" class="essay3-label">
                     <li class="essay-3-time"><p>📅2024年7月21日</p></li>
-                    <li><a href="../classify-index-html/prog-index.html" class="essay-3-label">💻编程</a></li>
+                    <li><a href="./prog-index.html" class="essay-3-label">💻编程</a></li>
                 </ul>
             </div>
         </div>
     </body>
+
 </html>
