--- a/tory.html
+++ b/tory.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>阿巴阿巴の小窝 - 博客历史</title>
-        <link rel="stylesheet" type="text/css" href="../css/tory.css">
+        <link rel="stylesheet" type="text/css" href="./tory.css">
     </head>
     <body>
         <div class="body">
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="../image/headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -71,13 +71,14 @@
                     <li class="time-3"><p>07-21</p></li>
                 </ul>
                 <ul type="none" class="text-title">
-                    <li class="text-title-li-1"><a href="../essay/1_今天开始写代码喽~.html" class="text-title-a-1">今天开始写代码喽~</a></li>
-                    <li class="text-title-li-2"><a href="../essay/2_初识vscode.html" class="text-title-a-2">初识vscode</a></li>
-                    <li class="text-title-li-2"><a href="../essay/3_html的基础框架.html" class="text-title-a-3">html的基础框架</a></li>
+                    <li class="text-title-li-1"><a href="./1_今天开始写代码喽~.html" class="text-title-a-1">今天开始写代码喽~</a></li>
+                    <li class="text-title-li-2"><a href="./2_初识vscode.html" class="text-title-a-2">初识vscode</a></li>
+                    <li class="text-title-li-2"><a href="./3_html的基础框架.html" class="text-title-a-3">html的基础框架</a></li>
                 </ul>
             </div>
 
 
         </div>
     </body>
+
 </html>
