--- a/travel-index.html
+++ b/travel-index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>阿巴阿巴の小窝 - 人生这旅途</title>
-        <link rel="stylesheet" type="text/css" href="../classify-index-css/travel-index.css">
+        <link rel="stylesheet" type="text/css" href="./travel-index.css">
     </head>
     <body>
         <div class="body">
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="../image/headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -27,14 +27,14 @@
             </div>
             <div class="nav">
                 <ul type="none" class="nav-ul">
-                    <li><a href="../html/index.html" class="yes">🏠回到首页</a></li>
-                    <li><a href="../html/text.html" class="yes">📄文章归档</a></li>
-                    <li><a href="../html/tory.html" class="yes">📅博客历史</a></li>
-                    <li><a href="../html/about.html" class="yes">😎关于博主</a></li>
+                    <li><a href="./index.html" class="yes">🏠回到首页</a></li>
+                    <li><a href="./text.html" class="yes">📄文章归档</a></li>
+                    <li><a href="./tory.html" class="yes">📅博客历史</a></li>
+                    <li><a href="./about.html" class="yes">😎关于博主</a></li>
                 </ul>
             </div>
             <div class="essay-1">
-                <a href="../essay/1_今天开始写代码喽~.html" class="essay-1-a">
+                <a href="./1_今天开始写代码喽~.html" class="essay-1-a">
                     <div class="essay-1-background">
                         <div class="essay-1-background-blackbox"></div>
                         <div class="essay-1-title">
@@ -49,4 +49,5 @@
             </div>
         </div>
     </body>
+
 </html>
