--- a/text.html
+++ b/text.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>阿巴阿巴の小窝 - 文章归档</title>
-        <link rel="stylesheet" type="text/css" href="../css/text.css">
+        <link rel="stylesheet" type="text/css" href="./text.css">
     </head>
     <body>
         <div class="body">
@@ -11,7 +11,7 @@
                 <div class="white-background"></div>
             </div>
             <div class="headimg">
-                <img src="../image/headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
+                <img src="./headimg.png" width="170px" height="170px" alt="阿巴阿巴" title="头像" class="head-img">
             </div>
             <div class="headimg-bottom">
                 <ul type="none" class="headimg-bottom-text">
@@ -35,20 +35,20 @@
             </div>
             <div class="label">
                 <ul type="none" class="label-1">
-                    <li class="label1-li"><a href="../essay-index-html/essay-html-index.html" class="label-item-class1"># HTML 1</a><li>
+                    <li class="label1-li"><a href="./essay-html-index.html" class="label-item-class1"># HTML 1</a><li>
                     <li class="label1-li"><a href="#" class="label-item-class2"># CSS 0</a></li>
-                    <li class="label1-li"><a href="../essay-index-html/essay-vscode-index.html" class="label-item-class3"># vscode 1</a></li>
-                    <li class="label1-li"><a href="../essay-index-html/essay-essay-index.html" class="label-item-class4"># 随笔 1</a></li>
+                    <li class="label1-li"><a href="./essay-vscode-index.html" class="label-item-class3"># vscode 1</a></li>
+                    <li class="label1-li"><a href="./essay-essay-index.html" class="label-item-class4"># 随笔 1</a></li>
                     <li class="label1-li"><a href="#" class="label-item-class5"># pvz 0</a></li>
                 </ul>
             </div>
             <div class="label-img">
-                <img class="label-img-1" src="../image/label-img-1.jpg" width="270px" height="160px">
-                <img class="label-img-2" src="../image/label-img-2.jpg" width="270px" height="160px">
+                <img class="label-img-1" src="./label-img-1.jpg" width="270px" height="160px">
+                <img class="label-img-2" src="./label-img-2.jpg" width="270px" height="160px">
             </div>
             <div class="label-img-background">
-                <a href="../classify-index-html/prog-index.html"><div class="label-img-background-1"></div></a>
-                <a href="../classify-index-html/travel-index.html"><div class="label-img-background-2"></div></a>
+                <a href="./prog-index.html"><div class="label-img-background-1"></div></a>
+                <a href="./travel-index.html"><div class="label-img-background-2"></div></a>
             </div>
             <div class="label-img-text">
                 <h1 class="label-img-text-1">编程</h1>
@@ -56,4 +56,5 @@
             </div>
         </div>
     </body>
+
 </html>
