--- a/2_初识vscode.html
+++ b/2_初识vscode.html
@@ -78,8 +78,8 @@
                     <p>官网链接：<a href="https://code.visualstudio.com/" class="body-3-text-1-a">https://code.visualstudio.com/</a></p>
                 </div>
                 <div class="body-3-text-img">
-                    <img class="body-3-text-img-1" src="../image/essay-vscode-text-img1.png" width="600px" height="300px">
-                    <img class="body-3-text-img-2" src="../image/essay-vscode-text-img2.png" width="600px" height="300px">
+                    <img class="body-3-text-img-1" src="./essay-vscode-text-img1.png" width="600px" height="300px">
+                    <img class="body-3-text-img-2" src="./essay-vscode-text-img2.png" width="600px" height="300px">
                 </div>
                 <div class="body-3-text-2">
                     <p>下载完成后跟随引导安装即可</p>
@@ -96,5 +96,6 @@
     </body>
 
 </html>
+
 
 
