--- a/2_初识vscode.html
+++ b/2_初识vscode.html
@@ -88,7 +88,7 @@
             <div>
                 <ul type="none" class="bottom">
                     <li class="bottom-ul-li-1"><a href="#" class="bottom-label-1">pvz</a></li>
-                    <li class="bottom-ul-li-2"><a href="../essay-index-html/essay-essay-index.html" class="bottom-label-2">随笔</a></li>
+                    <li class="bottom-ul-li-2"><a href="./essay-essay-index.html" class="bottom-label-2">随笔</a></li>
                     <li class="bottom-ul-li-3"><a href="#" class="bottom-label-3">css</a></li>
                 </ul>
             </div>
@@ -96,6 +96,7 @@
     </body>
 
 </html>
+
 
 
 
